samples/_failures_safe/1761164394_47f924_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1cb0b4b.c: In function ‘main’:
./samples/SAFE/__tmp_c1cb0b4b.c:149:9: error: expected declaration or statement at end of input
  149 |         print_state_info(&sm);
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c1cb0b4b.c:149:9: error: expected declaration or statement at end of input
